<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lasur"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/inputPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTV"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/heightTextTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/weight_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTV"/>

        <EditText
            android:id="@+id/heightET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/lasur"
            android:textColor="@color/black"
            android:hint="@string/weight_input_text"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/weightTextTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/height_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="15dp"

            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <EditText
            android:id="@+id/weightET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@color/lasur"
            android:textColor="@color/black"
            android:hint="@string/height_input_text"
            android:inputType="number"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/calculateBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_text"
            android:textSize="18sp"
            android:backgroundTint="@color/magenta"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>